--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,20 +1,31 @@
 server.http.port=8089
 
 # jdbc配置
-spring.datasource.url=jdbc:mysql://10.115.10.244:3306/funday
-#spring.datasource.username=admin
-#spring.datasource.password=work@tcl
+spring.datasource.url=jdbc:mysql://
+#spring.datasource.username=
+#spring.datasource.password=
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 # Dubbo配置
-#dubbo.application.name=funday-cms-consumer
-#dubbo.register.address=devZK1:2181,devZK2:2181,devZK2:2181
+#dubbo.application.name=
+#dubbo.register.address=
 #dubbo.protocol.timeout=5000
 
 # 本地临时文件目录
-#local.temp.file.dir=/tmp/file/funday
-# 文件上传配置, local表示将文件存储到宿主服务器, test表示将文件存储到TCL云存储
-#file.storage.channel=local
+local.temp.file.dir=/tmp/file/merlin
+# 文件上传配置, local表示将文件存储到宿主服务器, test表示将文件存储到云存储
+file.storage.channel=local
 
 # 本地文件存储目录
-#local.file.storage.dir=/data/file/funday
+#local.file.storage.dir=/data/file/merlin
+
+#redis
+spring.redis.hostName=127.0.0.1
+spring.redis.port=6379
+spring.redis.password=merlin123
+spring.redis.pool.maxActive=8
+spring.redis.pool.maxWait=1
+spring.redis.pool.maxIdle=8
+spring.redis.pool.minIdle=0
+spring.redis.timeout=1000
+spring.redis.database=0
