--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.application.name=merlin-website
 #自定义HTTP服务端口
 server.http.port=8080
 # 项目统一的path前缀
-# server.servlet-path=/funday-cms
+server.servlet-path=/merlin-website
 server.compression.enabled=true
 server.compression.min-response-size=1
 # 服务端会话超时时间, 1天(24 * 60 * 60), 单位秒
@@ -34,8 +34,8 @@ multipart.max-request-size=1024Mb
 # LOGGING
 logging.level.root=INFO
 logging.level.org.springframework.web=INFO
-logging.level.com.hawk.funday=INFO
-logging.level.com.hawk.funday.cms.dal.mapper.LaunchRecommendMapper=DEBUG
+logging.level.com.website.learn=INFO
+logging.level.com.website.learn.dao.dal.mapper=DEBUG
 logging.path=/data/logs/merlin/website
 logging.file=${logging.path}/merlin-website.log
 
@@ -67,3 +67,6 @@ spring.profiles.active=dev
 # mybatis配置
 mybatis.typeAliasesPackage=com.website.learn.dao.entity
 mybatis.mapperLocations=classpath*:com/website/learn/dao/xml/*.xml
+
+
+
