完成数据加密和验证

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,10 +1,10 @@
 server.http.port=8089
 
 # jdbc配置
-spring.datasource.url=jdbc:mysql://
-#spring.datasource.username=
-#spring.datasource.password=
-#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/merlin?useUnicode=true&autoReconnect=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true
+spring.datasource.username=root
+spring.datasource.password=mysql
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 # Dubbo配置
 #dubbo.application.name=
@@ -17,7 +17,7 @@ local.temp.file.dir=/tmp/file/merlin
 file.storage.channel=local
 
 # 本地文件存储目录
-#local.file.storage.dir=/data/file/merlin
+local.file.storage.dir=/data/file/merlin
 
 #redis
 spring.redis.hostName=127.0.0.1
