--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,9 +32,9 @@ multipart.max-file-size=1024Mb
 multipart.max-request-size=1024Mb
 
 # LOGGING
-logging.level.root=INFO
-logging.level.org.springframework.web=INFO
-logging.level.com.website.learn=INFO
+logging.level.root=DEBUG
+logging.level.org.springframework.web=DEBUG
+logging.level.com.website.learn=DEBUG
 logging.level.com.website.learn.dao.dal.mapper=DEBUG
 logging.path=/data/logs/merlin/website
 logging.file=${logging.path}/merlin-website.log
@@ -49,23 +49,23 @@ spring.profiles.active=dev
 
 
 # 配置mysql使用alibaba druid作为数据源
-#spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
-#spring.datasource.filters=stat
-#spring.datasource.maxActive=20
-#spring.datasource.initialSize=1
-#spring.datasource.maxWait=5000
-#spring.datasource.minIdle=1
-#spring.datasource.timeBetweenEvictionRunsMillis=60000
-#spring.datasource.minEvictableIdleTimeMillis=300000
-#spring.datasource.validationQuery=select 'x'
-#spring.datasource.testWhileIdle=true
-#spring.datasource.testOnBorrow=false
-#spring.datasource.testOnReturn=false
-#spring.datasource.poolPreparedStatements=true
-#spring.datasource.maxOpenPreparedStatements=20
+spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
+spring.datasource.filters=stat
+spring.datasource.maxActive=20
+spring.datasource.initialSize=1
+spring.datasource.maxWait=5000
+spring.datasource.minIdle=1
+spring.datasource.timeBetweenEvictionRunsMillis=60000
+spring.datasource.minEvictableIdleTimeMillis=300000
+spring.datasource.validationQuery=select 'x'
+spring.datasource.testWhileIdle=true
+spring.datasource.testOnBorrow=false
+spring.datasource.testOnReturn=false
+spring.datasource.poolPreparedStatements=true
+spring.datasource.maxOpenPreparedStatements=20
 
 # mybatis配置
-mybatis.typeAliasesPackage=com.website.learn.dao.entity
+mybatis.typeAliasesPackage=com.website.learn.bean.po
 mybatis.mapperLocations=classpath*:com/website/learn/dao/xml/*.xml
 
 
