--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,10 +32,10 @@ multipart.max-file-size=1024Mb
 multipart.max-request-size=1024Mb
 
 # LOGGING
-logging.level.root=DEBUG
-logging.level.org.springframework.web=DEBUG
-logging.level.com.website.learn=DEBUG
-logging.level.com.website.learn.dao.dal.mapper=DEBUG
+logging.level.root=info
+logging.level.org.springframework.web=info
+logging.level.com.website.learn=info
+logging.level.com.website.learn.dao.dal.mapper=info
 logging.path=/data/logs/merlin/website
 logging.file=${logging.path}/merlin-website.log
 
@@ -66,7 +66,7 @@ spring.datasource.maxOpenPreparedStatements=20
 
 # mybatis配置
 mybatis.typeAliasesPackage=com.website.learn.bean.po
-mybatis.mapperLocations=classpath*:com/website/learn/dao/xml/*.xml
+mybatis.mapperLocations=classpath*:com/website/learn/dao/dal/xml/*.xml
 
 
 
